# SedulousEngine

./: .gitignore  Architecture.md  CONTRIBUTING.md  EditorRoadmap.md  EngineArchitecture.md  EngineRoadmap.md  LICENSE  README.md  RenderArchitecture.md  RendererRoadmap.md  UI.md  UIManual.md  UITheme.md  VG.md
Assets/: builtin.registry
Assets/materials/: default.material  default_unlit.material
Assets/primitives/: cube.mesh  plane.mesh  sphere.mesh
Assets/shaders/: blit.frag.hlsl  blit.vert.hlsl  bloom_downsample.frag.hlsl  bloom_upsample.frag.hlsl  debug_line.frag.hlsl  debug_line.vert.hlsl  debug_overlay.frag.hlsl  debug_overlay.vert.hlsl  decal.frag.hlsl  decal.vert.hlsl  depth_only.frag.hlsl  depth_only.vert.hlsl  forward.frag.hlsl  forward.vert.hlsl  fullscreen.vert.hlsl  particle.frag.hlsl  particle.vert.hlsl  particle_trail.frag.hlsl  particle_trail.vert.hlsl  pick.frag.hlsl  pick.vert.hlsl  skinning.comp.hlsl  sky.frag.hlsl  sky.vert.hlsl  sky_cubemap.frag.hlsl  slug.frag.hlsl  slug.vert.hlsl  sprite.frag.hlsl  sprite.vert.hlsl  tonemap.frag.hlsl  tonemap.vert.hlsl  unlit.frag.hlsl  unlit.vert.hlsl  vg.frag.hlsl  vg.vert.hlsl
Code/: BeefSpace.toml
Code/Dependencies/Dxc-Beef/: BeefProj.toml
Code/Dependencies/Nuklear-Beef/: BeefProj.toml  BeefSpace.toml  build-native.ps1
Code/Dependencies/Nuklear-Beef/Nuklear/: CMakeLists.txt  githash.txt  nuklear_stub.c
Code/Dependencies/SPIRV-Cross-Beef/: BeefSpace.toml
Code/Dependencies/cimgui-Beef/: .gitignore  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  generate_bindings.py
Code/Dependencies/cimgui-Beef/cimgui/: githash.txt
Code/Dependencies/cimgui-Beef/cimgui/backend_test/example_glfw_opengl3/: CMakeLists.txt
Code/Dependencies/cimgui-Beef/src/: cimgui.bf  cimgui_Beef.bf  imgui.manual.bf
Code/Dependencies/glslang-Beef/: BeefSpace.toml
Code/Dependencies/joltc-Beef/: build-native.ps1
Code/Dependencies/recastnavigation-Beef/: BeefProj.toml  BeefSpace.toml  build-native.ps1
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/: CMakeLists.txt
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/DebugUtils-c/: DebugUtilsC.cpp  DebugUtilsC.h
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/Detour-c/: DetourC.cpp  DetourC.h
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/DetourCrowd-c/: DetourCrowdC.cpp  DetourCrowdC.h
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/DetourTileCache-c/: DetourTileCacheC.cpp  DetourTileCacheC.h
Code/Dependencies/recastnavigation-Beef/recastnavigation-c/Recast-c/: RecastC.cpp  RecastC.h
Code/Dependencies/stb_image-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  stb_image_stub.c
Code/Dependencies/stb_image-Beef/src/: stb_image.bf
Code/Dependencies/ufbx-Beef/: .gitignore  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1
Code/Dependencies/ufbx-Beef/src/: UFBX.bf
Code/Dependencies/ufbx-Beef/ufbx/: githash.txt
Code/Dependencies/ufbx-Beef/ufbx-Beef-Test/: BeefProj.toml
Code/Dependencies/ufbx-Beef/ufbx-Beef-Test/src/: Program.bf
Code/Deprecated/GUISandbox/: BeefProj.toml
Code/Deprecated/Sedulous.GUI/: BeefProj.toml  GUIGaps.md  IMAGE_STYLING_PLAN.md
Code/Deprecated/Sedulous.GUI.Shell/: BeefProj.toml
Code/Editor/Sedulous.Editor.App/: BeefProj.toml
Code/Editor/Sedulous.Editor.Core/: BeefProj.toml
Code/Engine/Sedulous.Engine.Animation/: BeefProj.toml
Code/Engine/Sedulous.Engine.App/: BeefProj.toml
Code/Engine/Sedulous.Engine.Audio/: BeefProj.toml
Code/Engine/Sedulous.Engine.Core/: BeefProj.toml
Code/Engine/Sedulous.Engine.Core.Tests/: BeefProj.toml
Code/Engine/Sedulous.Engine.GUI/: BeefProj.toml
Code/Engine/Sedulous.Engine.Input/: BeefProj.toml
Code/Engine/Sedulous.Engine.Navigation/: BeefProj.toml
Code/Engine/Sedulous.Engine.Physics/: BeefProj.toml
Code/Engine/Sedulous.Engine.Render/: BeefProj.toml
Code/Engine/Sedulous.Engine.Runtime/: BeefProj.toml
Code/Engine/Sedulous.Engine.UI/: BeefProj.toml
Code/Experimental/Sedulous.Slug/: BeefProj.toml  Slug.md
Code/Experimental/Sedulous.Slug.Renderer/: BeefProj.toml
Code/Experimental/Sedulous.Slug.TTF/: BeefProj.toml
Code/Experimental/Sedulous.Slug.Tests/: BeefProj.toml
Code/Experimental/Sedulous.UI2/: BeefProj.toml
Code/Experimental/Sedulous.UI2.Shell/: BeefProj.toml
Code/Experimental/Sedulous.UI2.Tests/: BeefProj.toml
Code/Experimental/Sedulous.UI2.Toolkit/: BeefProj.toml
Code/Experimental/SlugSample/: BeefProj.toml
Code/Experimental/UI2Sandbox/: BeefProj.toml
Code/Foundation/Sedulous.Animation/: BeefProj.toml
Code/Foundation/Sedulous.Animation.Resources/: BeefProj.toml
Code/Foundation/Sedulous.Animation.Tests/: BeefProj.toml
Code/Foundation/Sedulous.Audio/: BeefProj.toml
Code/Foundation/Sedulous.Audio.Effects/: BeefProj.toml
Code/Foundation/Sedulous.Audio.Effects.Tests/: BeefProj.toml
Code/Foundation/Sedulous.Audio.SDL3/: BeefProj.toml
Code/Foundation/Sedulous.Audio.Tests/: BeefProj.toml
Code/Foundation/Sedulous.Core.Collections/: BeefProj.toml
Code/Foundation/Sedulous.Core.Logging/: BeefProj.toml
Code/Foundation/Sedulous.Core.Mathematics/: BeefProj.toml
Code/Foundation/Sedulous.Core.Mathematics.Serialization/: BeefProj.toml
Code/Foundation/Sedulous.Core.Mathematics.Tests/: BeefProj.toml
Code/Foundation/Sedulous.Core.Tests/: BeefProj.toml
Code/Foundation/Sedulous.DebugFont/: BeefProj.toml
Code/Foundation/Sedulous.Drawing/: BeefProj.toml
Code/Foundation/Sedulous.Drawing.Fonts/: BeefProj.toml
Code/Foundation/Sedulous.Drawing.Renderer/: BeefProj.toml
Code/Foundation/Sedulous.Drawing.Tests/: BeefProj.toml
Code/Foundation/Sedulous.Fonts.Resources/: BeefProj.toml
Code/Foundation/Sedulous.Fonts.TTF/: BeefProj.toml
Code/Foundation/Sedulous.Fonts.Tests/: BeefProj.toml
Documentation/: Architecture.md  EngineArchitecture.md  RenderArchitecture.md  UIManual.md  UITheme.md
Documentation/Roadmap/: AudioRoadmap.md  EditorRoadmap.md  EngineRoadmap.md  RendererOptimization.md  RendererRoadmap.md  UIRoadmap.md  VGRoadmap.md
(+1583 files in other folders)
